allows no-root execution in docker, tmpdir is now a boolean and singularity scheduler